// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AtSwitch Snap render AtSwitch -- props border 1`] = `
<view
  class="at-switch at-switch--without-border"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch Snap render AtSwitch -- props checked 1`] = `
<view
  class="at-switch"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      checked="checked"
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch Snap render AtSwitch -- props disabled 1`] = `
<view
  class="at-switch"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container at-switch--disabled"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      checked="checked"
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch Snap render AtSwitch -- props disabled 2`] = `
<view
  class="at-switch"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container at-switch--disabled"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch Snap render AtSwitch -- props title 1`] = `
<view
  class="at-switch"
>
  <view
    class="at-switch__title"
  >
    开启中
  </view>
  <view
    class="at-switch__container"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;

exports[`AtSwitch Snap render initial AtSwitch 1`] = `
<view
  class="at-switch"
>
  <view
    class="at-switch__title"
  />
  <view
    class="at-switch__container"
  >
    <view
      class="at-switch__mask"
    />
    <switch
      class="at-switch__switch"
      color="#6190e8"
    />
  </view>
</view>
`;
